tests/functional/lang/eval-fail/assert-equal-paths.err.exp
error:
       … while evaluating the condition of the assertion '(/pwd/lang/eval-fail/foo == /pwd/lang/eval-fail/bar)'
         at /pwd/lang/eval-fail/assert-equal-paths.nix:1:1:
            1| assert ./foo == ./bar;
             | ^
            2| throw "unreachable"

       error: path '/pwd/lang/eval-fail/foo' is not equal to path '/pwd/lang/eval-fail/bar'
